# oramacore

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-cpu  README.md  api-test.hurl  build.rs  clippy.toml  config-docker.yaml  config.json  config.jsonc  config.yaml  docker-compose.yml  docker.sh  download-test-model.sh  embedding-api-test.hurl  flake.nix  prometheus.yml  requirements-cpu.txt  requirements.txt
.config/zed/: settings.json
.github/workflows/: ci.yml  cla.yml  release-build-test.yml  release-build.yml  rust-release.yml  rust.yml
analytics_storage/: .gitignore  Cargo.toml
analytics_storage/src/: lib.rs  utils.rs
architecture/: 01_server.md  02_indexes.md
benches/: README.md  fulltext_fast.rs  fulltext_minimal.rs  fulltext_search.rs  fulltext_simple.rs  hnsw.rs  phrase_match._rs  phrase_match.rs  run_complete_benchmark.sh  run_fulltext_benchmark.sh  string_index_bench._rs  string_index_bench.rs
bool_index/: Cargo.toml
bool_index/src/: lib.rs
code_index/: Cargo.toml
code_index/src/: lib.rs
code_parser/: Cargo.toml
code_parser/src/: lib.rs  treesitter.rs
collection_manager/: Cargo.toml
collection_manager/src/: collection.rs  document.rs  dto.rs  embeddings_management.rs  lib.rs
content_expander/: Cargo.toml  cargo.toml
content_expander/src/: code.rs  lib.rs  prompts.rs  vision.rs
crates/ai_service_client/: Cargo.toml  build.rs
crates/bkd/: Cargo.toml
crates/filters/: Cargo.toml
crates/fs/: Cargo.toml
crates/fs/src/: lib.rs
crates/hnsw2/: Cargo.toml
crates/hook_storage/: Cargo.toml
crates/hook_storage/src/: lib.rs  reader.rs  writer.rs
crates/nlp/: Cargo.toml  build.rs
crates/nlp/src/: chunker.rs  lib.rs  locales.rs  stop_words.rs  tokenizer.rs
crates/types/: Cargo.toml
crates/types/src/: dto.rs  lib.rs  types.rs
crates/types/src/dto/: number.rs
docker/: Dockerfile-ai-server  Dockerfile-ai-server-cuda  Dockerfile-oramacore-arm64  Dockerfile-oramacore-x86  build.sh
docs/: .env.example  README.md  biome.json  next.config.mjs  orama-api.yaml  package-lock.json  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.js
docs/app/: global.css  layout.config.tsx  layout.tsx  providers.tsx
docs/lib/: get-llm-text.ts  metadata.ts  source.ts
docs/scripts/: generate-docs.mjs  postbuild.ts
document_storage/: Cargo.toml
document_storage/src/: lib.rs
embeddings/: .gitignore  Cargo.toml
embeddings/src/: custom_models.rs  lib.rs  pq.rs  product_quantization.rs  properties_selector.rs
envoy/: envoy.yaml
graphs/: Cargo.toml
graphs/benches/: fst_bench.rs
graphs/src/: fst.rs  lib.rs
llama_vision/: cargo.toml
llama_vision/src/: fetcher.rs  lib.rs  prompts.rs
llm/: Cargo.toml
llm/src/: lib.rs
llm/src/content_expander/: code.rs  mod.rs  prompts.rs  vision.rs
llm/src/conversational/: mod.rs  prompts.rs
llm/src/query_translator/: mod.rs
llm/src/questions_generation/: generator.rs  lib.rs  mod.rs  prompts.rs
misc/: build-features.sh
nlp/: Cargo.toml  build.rs
nlp/src/: chunker.rs  languages.rs  lib.rs  locales.rs  stop_words.rs  tokenizer.rs
number_index/: Cargo.toml
number_index/src/: lib.rs
otel/: OramaCore Dashboard.json
radix_tree/: Cargo.toml
radix_tree/src/: lib.rs
rustorama/: Cargo.toml  README.md  build.rs  config.json  insert.js
rustorama/src/: main.rs
rustyorama/: Cargo.toml
rustyorama/src/: main.rs
src/: ai.rs  build_info.rs  capped_heap.rs  document_storage.rs  field_id_hashmap.rs  file_utils.rs  lib.rs  lock.rs  merger.rs  metrics.rs  offset_storage.rs  test_utils.rs  tests.rs  types.rs
src/ai/: advanced_autoquery.rs  answer.rs  automatic_embeddings_selector.rs  constraint_extractor.rs  context_evaluator.rs  gpu.rs  grpc.rs  llms.rs  mod.rs  models_info.json  party_planner.rs  ragat.rs  requirements.txt  run_hooks.rs  segments.rs  service_pb2.py  tools.rs  training_sets.rs  vllm.rs
src/ai_client/: client.rs
src/ai_server/: .dockerignore  .gitignore  Dockerfile  Makefile  config.yaml  cpu-requirements.txt  requirements-cpu.txt  requirements.txt  sandbox.py  server.py  service.proto  service_pb2.py  service_pb2_grpc.py  test.sh
src/auth/: jwt_manager.rs  mod.rs
src/code_parser/: mod.rs  tool_parser.rs
src/collection_manager/: bm25.rs  collection.rs  dto.rs  global_info.rs  mod.rs
src/embeddings/: README.md  custom_models.rs  fe.rs  grpc.rs  hf.rs  mod.rs
src/indexes/: bool.rs  code.rs  fst.rs  hnsw.rs  hnsw2.rs  map.rs  mod.rs  number.rs  ordered_key.rs  radix.rs  vector.rs
src/js/: deno.rs  deno2.rs  mod.rs
src/long_term_memory/: analyzer.rs  knowledge_graph.rs  memory.rs  mod.rs
src/metrics/: counter.rs  gauge.rs  histogram.rs  mod.rs
src/nlp/: chunker.rs  locales.rs  mod.rs  stop_words.rs  tokenizer.rs
src/pin_rules/: file_util.rs  mod.rs  op.rs  reader.rs  types.rs  writer.rs
src/python/: embeddings.rs  mcp.rs  mod.rs
src/tests/: all.rs  analytics.rs  answer.rs  api_key_chain.rs  api_key_extraction.rs  batch_get_documents.rs  boost_integration.rs  bugs.rs  claim_limitations.rs  commit.rs  concurrency.rs  customer_jwt_search.rs  datasource.rs  delete_colleciton.rs  delete_collection.rs  (+61 more)
storage/: Cargo.toml
string_index/: Cargo.toml
string_index/benches/: string_index_bench.rs
string_index/src/: concurrent_radix_tree.rs  dictionary.rs  lib.rs  posting_storage.rs  radix_tree.rs  scorer.rs
string_ultils/: Cargo.toml
tanstack_example/: .gitignore  Cargo.toml  README.md
tanstack_example/src/: documentation.rs  example.rs  fs_utils.rs  main.rs
tanstack_example/tanstack/: 000020.sst  000025.sst  000030.sst  IDENTITY  LOG  LOG.old.1730799144552909  LOG.old.1730799195554035  LOG.old.1730800080614099  LOG.old.1730800115022553  LOG.old.1730800128698400  LOG.old.1730800144630771  MANIFEST-000032  OPTIONS-000029
tests/: bools.rs  empty_term.rs  filter_number.rs  search.rs  test_search_without_webserver.rs
types/: Cargo.toml
utils/: Cargo.toml
vector_index/: Cargo.toml
vector_index/src/: lib.rs
web_server/: Cargo.toml
web_server/src/: lib.rs
web_server/src/api/: collection.rs  mod.rs
(+439 files in other folders)
