[package]
name = "oramacore"
version = "1.1.8"
edition = "2021"

[dependencies]
config = { version = "0.15.6", features = ["json5"] }

anyhow = { workspace = true }

serde_json = { workspace = true }

tokio = { version = "1", features = ["rt", "rt-multi-thread", "full", "sync"] }
tokio-stream = "0.1"

serde = { workspace = true }

dashmap = { workspace = true }
bincode = "1.3.3"

rayon = "1.10.0"
ai_service_client = { path = "./crates/ai_service_client" }

ptrie = { git = "https://github.com/oramasearch/ptrie.git", branch = "feat/scan-postfix-keys", features = [
    "serde",
] }

tiktoken-rs = { workspace = true }
nlp = { path = "./crates/nlp" }

async-trait = "0.1.85"

fst = "0.4.7"
rand = "0.9"

tonic = { workspace = true }
ordered-float = "4"
num-traits = "0.2"

futures = "0.3.31"

itertools = "0.14"
duration-string = { version = "0.5.2", features = ["serde"] }
chrono = "0.4.39"

# Webserver
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
http = "1.2.0"
axum-openapi3 = { workspace = true }

strum_macros = "0.26.4"

# Tracing
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# JS
oxc_parser = "0.47.1"
oxc_allocator = "0.47.1"
oxc_span = "0.47.1"

# prometheus
metrics-exporter-prometheus = "0.16.1"
metrics = { workspace = true }

memmap = "0.7.0"
cuid2 = "0.1.4"

mobc = "0.8"
redact = { workspace = true }
duration-str = "0.12.0"
rabbitmq-stream-client = { version = "0.8", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
parking_lot = "0.12.3"
serde-big-array = "0.5.1"
debug_panic = "0.2.1"
hnsw2 = { path = "./crates/hnsw2" }
repair_json = "0.1.0"
async-openai = "0.28.0"

orama-js-pool = "0.1.1"
sentry = "0.37.0"
sentry-tracing = "0.37.0"
nvml-wrapper = "0.10.0"
atomic-write-file = "0.2.3"

reqwest = { version = "0.12", features = ["json"] }

arrayvec = { workspace = true }
types = { path = "crates/types" }

[build-dependencies]

[dev-dependencies]
hurl = "6.0.0"
hurl_core = "6.0.0"
pretty_assertions = "1.4.1"
criterion = { version = "0.5.1", features = ["async_tokio"] }
http-body-util = "0.1.2"
mime = "0.3.17"
tower = { version = "0.5.2", features = ["util"] }
fastembed = { version = "4.4.0", features = ["ort-download-binaries"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tempfile = "3"
fake = "4.0.0"
dircpy = "0.3.19"
rallo = { version = "0.2.0" }

[[bin]]
name = "oramacore"
path = "src/bin/oramacore.rs"
[[bin]]
name = "embeddings"
path = "src/bin/embeddings/embeddings.rs"

# [[bench]]
# name = "phrase_match"
# harness = false

[[bench]]
name = "hnsw"
harness = false

[features]
default = ["writer", "reader"]
no_auto_embedding_field_on_creation = []
writer = []
reader = []
test-mem-alloc = []

[workspace]
members = [ "crates/ai_service_client","crates/hnsw2", "crates/nlp"]

[workspace.dependencies]
anyhow = "1"
dashmap = { version = "6.1.0", features = ["rayon"] }
serde = { version = "1", features = ["derive"] }
tiktoken-rs = "0.6.0"
tonic = { version = "0.13" }
axum-openapi3 = { version = "0.2", features = ["derive"] }
redact = { version = "0.1", features = ["serde"] }
arrayvec = "0.7.6"
serde_json = { version = "1", features = ["raw_value"] }
tracing = "0.1"
metrics = "0.24.1"
