[package]
name = "oramacore"
version = "1.1.88"
edition = "2021"
publish = false

[dependencies]
config = { version = "0.15.6", features = ["json5"] }

anyhow = "1"
thiserror = "2"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "full", "sync"] }
tokio-stream = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }

xtri = "0.1.1"

bincode = "1.3.3"

prost = "0.13.4"
tonic = "0.12.3"

dashmap = { version = "6.1.0", features = ["rayon"] }

regex = "1.11.1"

invocation-counter = "1.0.0"

tiktoken-rs = "0.6.0"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23.2"

async-trait = "0.1.85"

rand = "0.9"

ordered-float = "4"
num-traits = "0.2"

futures = "0.3.31"

itertools = "0.14"
duration-string = { version = "0.5.2", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

# Webserver
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }

strum_macros = "0.26.4"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

oramacore_lib = { version = "0.1.1" }

# JS
oxc_parser = "0.47.1"
oxc_allocator = "0.47.1"
oxc_span = "0.47.1"
oxc = "0.47.1"

# prometheus
metrics-exporter-prometheus = "0.16.1"
metrics = "0.24.1"

cuid2 = "0.1.4"

mobc = "0.8"
redact = { version = "0.1", features = ["serde"] }
duration-str = "0.12.0"
rabbitmq-stream-client = { version = "0.9", features = ["serde"] }
backoff = { version = "0.4.0", features = ["tokio"] }
debug_panic = "0.2.1"
async-openai = "0.28.0"

orama-js-pool = { version = "0.2.1" }
sentry = "0.37.0"
sentry-tracing = "0.37.0"
arrayvec = "0.7.6"
nvml-wrapper = "0.10.0"

reqwest = { version = "0.12", features = ["json"] }
fs_extra = "1.3.0"
rustls = "0.23.26"

zebo = "0.5.0"
llm_json = "1.0.2"
dateparser = "0.2.1"
clap = { version = "4.5.39", features = ["derive"] }
jwt-authorizer = "0.15"
jsonwebtoken = "9.3.1"
tokio-util = { version = "0.7.15", features = ["io"] }
schemars = { version = "1.0.4", features = ["chrono04"] }
http = "1.3.1"

[build-dependencies]
cc = "1"
tonic-build = "0.12.3"

[dev-dependencies]
# hurl = "6.0.0"
# hurl_core = "6.0.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
assert_approx_eq = "1.1.0"
fastembed = { version = "4.4.0", features = ["ort-download-binaries"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tempfile = "3"
fake = "4.0.0"
glob = "0.3.2"

[[bin]]
name = "oramacore"
path = "src/bin/oramacore.rs"
[[bin]]
name = "embeddings"
path = "src/bin/embeddings/embeddings.rs"

# [[bench]]
# name = "phrase_match"
# harness = false

# [[bench]]
# name = "hnsw"
# harness = false

[[bench]]
name = "fulltext_search"
harness = false

[[bench]]
name = "fulltext_simple"
harness = false

[[bench]]
name = "fulltext_minimal"
harness = false

[[bench]]
name = "fulltext_fast"
harness = false

[features]
default = ["writer", "reader"]
no_auto_embedding_field_on_creation = []
writer = []
reader = []
test-mem-alloc = []
