[package]
name = "analytics_storage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "storage"
path = "src/bin/test.rs"

[dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
csv = "1.3.0"
ms-converter = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.13.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]