[package]
name = "code_index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
bincode = "1.3.3"
itertools = "0.13.0"
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive"] }
radix_trie = "0.2"
dashmap = { version = "6.1.0", features = ["rayon"] }
csv = "1.3.0"
storage = { path = "../storage" }
tempdir = "0.3.7"
thiserror = "1.0.65"
smallvec = "1.13.2"
types = { path = "../types" }
ptrie = { git = "https://github.com/oramasearch/ptrie.git", branch = "feat/expose-find-postfixes-with-current" }
code_parser = { path = "../code_parser" }

[dev-dependencies]
nlp = { path = "../nlp" }

