[package]
name = "code_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_ecma_parser = "4.0.0"
swc_common = { version = "3.0.0", features = ["tty-emitter"] }
types = { path = "../types" }
regex = "1.11.1"
anyhow = "1.0.92"
tree-sitter-typescript = "0.23.0"
tree-sitter = "0.24.3"
dashmap = "6.1.0"

[build-dependencies]
cc="*"

[dev-dependencies]
pretty_assertions = "1.4.1"
