[package]
name = "collection_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
string_index = { path = "../string_index" }
nlp = { path = "../nlp" }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
thiserror = "1.0.65"
anyhow = "1.0.91"
storage = { path = "../storage" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
cuid = "1.3.3"
types = { path = "../types" }
document_storage = { path = "../document_storage" }
code_parser = { path = "../code_parser" }
ordered-float = "4.4.0"

[dev-dependencies]
tempdir = "0.3.7"
