[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pq"
path = "./src/bin/pq.rs"

[dependencies]
anyhow = "1.0.92"
fastembed = { version = "4.1.0", features = ["ort-download-binaries"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "full"] }
rayon = "1.8"
ndarray = "=0.15.6"
rand = "0.8.5"
num-traits = "0.2.19"
reductive = { version = "0.9.0" }
rand_chacha = "0.3.1"
