[package]
name = "embeddings"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pq"
path = "./src/bin/pq.rs"

[[bin]]
name = "pq_bench"
path = "./src/bin/pq_bench.rs"

[[bin]]
name = "embeddings"
path = "./src/bin/embeddings.rs"

[[bin]]
name = "selector"
path = "./src/bin/selector.rs"

[dependencies]
anyhow = "1.0.92"
types = { path = "../types" }
fastembed = { git = "https://github.com/micheleriva/fastembed-rs" , features = ["ort-download-binaries"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.41", features = ["rt", "rt-multi-thread", "full"] }
rayon = "1.8"
ndarray = "=0.15.6"
rand = "0.8.5"
num-traits = "0.2.19"
reductive = { version = "0.9.0" }
rand_chacha = "0.3.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
strum_macros = "0.26.4"
async-once-cell = "0.5.4"
once_cell = "1.20.2"
csv = "1.3.0"
quick-js = "0.4.1"
