[package]
name = "llm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_image"
path = "../llm/src/bin/test_image.rs"

[[bin]]
name = "test_code"
path = "../llm/src/bin/test_code.rs"

[[bin]]
name = "questions"
path = "../llm/src/bin/questions.rs"

[[bin]]
name = "query_translator"
path = "../llm/src/bin/query_translator.rs"

[dependencies]
linkify = "0.10.0"
anyhow = "1.0.91"
url = "2.5.2"
serde = "1.0.197"
log = "0.4.22"
reqwest = "0.12.8"
tokio = { version = "1.41.0", features = ["full"] }
tempdir = "0.3.7"
image = "0.25.4"
textwrap = "0.16.1"
futures-util = "0.3.31"
markdown = "0.3.0"
html_parser = "0.7.0"
futures = "0.3.31"
html-escape = "0.2.13"
utils = { path = "../utils" }
serde_json = "1.0.132"
strum = "0.26.3"
async-std = "1.13.0"
async-once-cell = "0.5.4"

[target.'cfg(not(target_os = "macos"))'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git" }

[target.'cfg(target_os = "macos")'.dependencies]
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", features = ["metal"] }
