[package]
name = "rustorama"
version = "0.1.0"
edition = "2021"

[dependencies]
web_server = { path = "../web_server" }
collection_manager = { path = "../collection_manager" }
storage = { path = "../storage" }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
config = { version = "0.14.0", features = ["json5"] }
anyhow = "1.0.91"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
