[package]
name = "rustorama"
version = "0.1.0"
edition = "2021"

[dependencies]
web_server = { path = "../web_server" }
collection_manager = { path = "../collection_manager" }
storage = { path = "../storage" }
config = { version = "0.14.0", features = ["json5"] }
anyhow = "1.0.91"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
futures = "0.3.31"
hurl = "5.0.1"
hurl_core = "5.0.1"
tempdir = "0.3.7"
