[package]
name = "rustyorama"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.14.0", features = ["json5"] }
anyhow = "1.0.91"
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7.9"
futures-util = "0.3.31"
futures = "0.3.31"
tokio-util = { version = "0.7.12", features = ["rt", "codec"] }
bincode = "1.3.3"
tokio-serde = { version = "0.9", features = ["bincode"] }
types = { path = "../types" }
dashmap = "6"
serde_json = "1"
axum-macros = "0.4"
tokio-stream = "0.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_filter = "0.1.2"
tower-http = { version = "0.6.1", features = ["trace"] }

[dev-dependencies]
tempdir = "0.3.7"
