[package]
name = "tanstack_example"
version = "0.1.0"
edition = "2021"

[dependencies]
collection_manager = { path = "../collection_manager" }
storage = { path = "../storage" }
config = { version = "0.14.0", features = ["json5"] }
anyhow = "1.0.91"
markdown = "0.3.0"
comrak = "0.29.0"
markdown-parser = "0.1.2"
pulldown-cmark = "0.12.2"
discord-md = "3.0.0"
serde_json = "1.0.132"
serde = { version = "1.0.214", features = ["derive"] }
types = { path = "../types" }
path-clean = "1.0.1"
code_parser = { path = "../code_parser" }
ptrie = { git = "https://github.com/oramasearch/ptrie.git", branch = "feat/expose-find-postfixes-with-current" }
itertools = "0.13.0"
content_expander = { path = "../content_expander" }
tokio = { version = "1.41.0", features = ["full"] }
sha2 = "0.10.8"
openai_api_rust = "0.1.9"
openai = "1.0.0-alpha.16"
async-openai = "0.25.0"
sha1 = "0.10.6"
futures = "0.3.31"
web_server = { path = "../web_server" }
