[package]
name = "vector_index"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test"
path = "./src/bin/test.rs"

[dependencies]
anyhow = "1.0.90"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.210", features = ["derive"] }
nlp = { path = "../nlp" }
embeddings = { path = "../embeddings" }
storage = { path = "../storage" }
types = { path = "../types" }
hora = { version = "0.1.1" }

