[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.132"
collection_manager = { path = "../collection_manager" }
tempdir = "0.3.7"
storage = { path = "../storage" }
types = { path = "../types" }
oasgen = { version = "0.22", features = ["actix", "swagger-ui"]}
axum = "0.7.6"
axum-macros = "0.4.2"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
http = "1.1.0"


[[bin]]
name = "test"
path = "src/bin/main.rs"

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
tower = { version = "0.5.1", features = ["util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
