[package]
name = "hook_storage"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.98"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
fs = { path = "../fs" }
orama-js-pool = "0.2.1"

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full"] }
fs = { path = "../fs", features = [ "generate_new_path" ] }
