[package]
name = "nlp"
version = "0.1.0"
edition = "2021"
description = "Natural language processing utilities for OramaCore."
authors = ["OramaCore Contributors"]
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rust-stemmers = "1.2.0"
regex = "1.11.1"
smallvec = { version = "1.13.2", features = ["serde"] }
rayon = "1.10.0"
thiserror = "2" 
dashmap = { version = "6.1.0", features = ["rayon"] }
tiktoken-rs = "0.6.0"
text-splitter = { version = "0.22", features = ["tiktoken-rs", "markdown", "code"] }
