[package]
name = "types"
version = "0.1.0"
edition = "2024"

[dependencies]
nlp = { path = "../nlp" }
ai_service_client = { path = "../ai_service_client" }

axum-openapi3 = { workspace = true }
redact = { workspace = true }
serde = { workspace = true }
serde_json = {workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
